Dataset de prueba para entrenamiento

--- a/.dvcignore
+++ b/.dvcignore
@@ -8,4 +8,4 @@ modulo-2/dataset/Atras
 "modulo-2/dataset/Atras Izquierda"
 "modulo-2/dataset/Atras Derecha"
 modulo-2/dataset/Estatico
-
+modulo-2/dataset/LabelMe
