--- a/requirements.txt
+++ b/requirements.txt
@@ -42,8 +42,10 @@ click-repl=0.3.0=pypi_0
 cmake=3.25.0=pypi_0
 colorama=0.4.6=pypi_0
 configobj=5.0.8=pypi_0
+contourpy=1.1.1=pypi_0
 crcmod=1.7=pypi_0
 cryptography=41.0.3=pypi_0
+cycler=0.11.0=pypi_0
 decorator=5.1.1=pypi_0
 dictdiffer=0.9.0=pypi_0
 diskcache=5.6.3=pypi_0
@@ -70,6 +72,7 @@ exceptiongroup=1.1.3=pypi_0
 filelock=3.12.4=pypi_0
 flatten-dict=0.4.2=pypi_0
 flufl-lock=7.1.1=pypi_0
+fonttools=4.42.1=pypi_0
 frozenlist=1.4.0=pypi_0
 fsspec=2023.6.0=pypi_0
 funcy=2.0=pypi_0
@@ -93,12 +96,16 @@ httplib2=0.22.0=pypi_0
 httpx=0.25.0=pypi_0
 hydra-core=1.3.2=pypi_0
 idna=3.4=pypi_0
+importlib-resources=6.0.1=pypi_0
 isodate=0.6.1=pypi_0
 iterative-telemetry=0.0.8=pypi_0
 jinja2=3.1.2=pypi_0
 jmespath=0.10.0=pypi_0
+joblib=1.3.2=pypi_0
+kiwisolver=1.4.5=pypi_0
 knack=0.11.0=pypi_0
 kombu=5.3.2=pypi_0
+labelme2yolo=0.1.2=pypi_0
 ld_impl_linux-64=2.38=h1181459_1
 libffi=3.4.4=h6a678d5_0
 libgcc-ng=11.2.0=h1234567_1
@@ -107,6 +114,7 @@ libstdcxx-ng=11.2.0=h1234567_1
 lit=15.0.7=pypi_0
 markdown-it-py=3.0.0=pypi_0
 markupsafe=2.1.2=pypi_0
+matplotlib=3.8.0=pypi_0
 mdurl=0.1.2=pypi_0
 mpmath=1.2.1=pypi_0
 msal=1.24.0=pypi_0
@@ -114,15 +122,17 @@ msal-extensions=1.0.0=pypi_0
 multidict=6.0.4=pypi_0
 ncurses=6.4=h6a678d5_0
 networkx=3.1=pypi_0
-numpy=1.26.0=pypi_0
+numpy=1.24.4=pypi_0
 oauth2client=4.1.3=pypi_0
 oauthlib=3.2.2=pypi_0
 omegaconf=2.3.0=pypi_0
+opencv-python=4.8.0.76=pypi_0
 openssl=3.0.10=h7f8727e_2
 orjson=3.9.7=pypi_0
 oss2=2.18.1=pypi_0
 ossfs=2023.8.0=pypi_0
 packaging=23.1=pypi_0
+pandas=2.1.0=pypi_0
 pathspec=0.11.2=pypi_0
 pillow=9.3.0=pypi_0
 pip=23.2.1=py39h06a4308_0
@@ -131,6 +141,7 @@ portalocker=2.8.2=pypi_0
 prompt-toolkit=3.0.39=pypi_0
 protobuf=4.24.3=pypi_0
 psutil=5.9.5=pypi_0
+py-cpuinfo=9.0.0=pypi_0
 pyarrow=13.0.0=pypi_0
 pyasn1=0.5.0=pypi_0
 pyasn1-modules=0.3.0=pypi_0
@@ -146,6 +157,7 @@ pyopenssl=23.2.0=pypi_0
 pyparsing=3.1.1=pypi_0
 python=3.9.18=h955ad1f_0
 python-dateutil=2.8.2=pypi_0
+pytz=2023.3.post1=pypi_0
 pyyaml=6.0.1=pypi_0
 readline=8.2=h5eee18b_0
 requests=2.31.0=pypi_0
@@ -156,7 +168,10 @@ ruamel-yaml=0.17.32=pypi_0
 ruamel-yaml-clib=0.2.7=pypi_0
 s3fs=2023.6.0=pypi_0
 s3transfer=0.6.2=pypi_0
+scikit-learn=1.2.2=pypi_0
+scipy=1.11.2=pypi_0
 scmrepo=1.3.1=pypi_0
+seaborn=0.12.2=pypi_0
 setuptools=68.0.0=py39h06a4308_0
 shortuuid=1.0.11=pypi_0
 shtab=1.6.4=pypi_0
@@ -168,6 +183,7 @@ sqltrie=0.7.0=pypi_0
 sshfs=2023.7.0=pypi_0
 sympy=1.11.1=pypi_0
 tabulate=0.9.0=pypi_0
+threadpoolctl=3.2.0=pypi_0
 tk=8.6.12=h1ccaba5_0
 tomlkit=0.12.1=pypi_0
 torch=2.0.1+cu118=pypi_0
@@ -177,6 +193,7 @@ tqdm=4.66.1=pypi_0
 triton=2.0.0=pypi_0
 typing-extensions=4.8.0=pypi_0
 tzdata=2023.3=pypi_0
+ultralytics=8.0.181=pypi_0
 uritemplate=4.1.1=pypi_0
 urllib3=1.26.16=pypi_0
 vine=5.0.0=pypi_0
@@ -188,4 +205,5 @@ wrapt=1.15.0=pypi_0
 xz=5.4.2=h5eee18b_0
 yarl=1.9.2=pypi_0
 zc-lockfile=3.0.post1=pypi_0
+zipp=3.17.0=pypi_0
 zlib=1.2.13=h5eee18b_0
